# no-frills-nix-python-template

./: .gitignore  README.md  derivation.nix  pyproject.toml
app/: cli.py
